--- a/templates/participant_profile/re_payment.html
+++ b/templates/participant_profile/re_payment.html
@@ -40,9 +40,6 @@
                 <a class="btn btn-danger btn-sm" href="{% url 'set-photo-profile' %}">
                     Unggah Photo
                 </a>
-                <a class="btn btn-danger btn-sm" href="{% url 'participant-kk' %}">
-                    Unggah Berkas
-                </a>
             </div>
         </div>
     </div>
@@ -53,6 +50,7 @@
                 <a class="nav-link tab-profile" href="{% url 'participant-major' %}" role="tab">Jurusan</a>
                 <a class="nav-link tab-profile" href="{% url 'participant-lms' %}" role="tab">Akun LMS</a>
                 <a class="nav-link tab-profile" href="{% url 'participant-graduation' %}" role="tab">Kelulusan</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-kk' %}" role="tab">Berkas</a>
                 {% if passed %}
                 <a class="nav-link tab-profile" href="{% url 'participant-payment' %}" role="tab">Pembayaran Daftar ulang</a>
                 {% endif %}
