fix typo, change menu, and add help text

--- a/templates/participant_profile/participant_files.html
+++ b/templates/participant_profile/participant_files.html
@@ -84,7 +84,7 @@
                                     <tr>
                                         <th scope="col">#</th>
                                         <th scope="col">Semester</th>
-                                        <th scope="col">Bagian</th>
+                                        <th scope="col">Lembar/Halaman</th>
                                         <th scope="col">Verifikasi</th>
                                         <th scope="col">Berkas Raport</th>
                                     </tr>
