--- a/templates/participant_profile/primaseru.html
+++ b/templates/participant_profile/primaseru.html
@@ -60,6 +60,9 @@
                 {% if passed %}
                 <a class="nav-link tab-profile" href="{% url 'participant-payment' %}" role="tab">Pembayaran Daftar ulang</a>
                 {% endif %}
+                {% if pay %}
+                <a class="nav-link tab-profile" href="{% url 'participant-raport' %}" role="tab">Berkas Daftar Ulang</a>
+                {% endif %}
             </div>
         </div>
     </div>
