rework register number generator

--- a/templates/dashboard/participantcount_form.html
+++ b/templates/dashboard/participantcount_form.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 {% endblock head %}
 {% block dashtitle %}
-    Data Halaman Pembayaran
+    Nomor Pendaftaran
 {% endblock dashtitle %}
 {% block maindash %}
     <div class="row px-3 mb-5">
