--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -6,41 +6,134 @@
 {% endblock dashtitle %}
 {% block head %}
     {{ block.super  }}
+    <style type="text/css" media="screen">
+     .badge-purple, .bg-purple {
+         background: #bf0db6;
+         color: white;
+     }
+     .text-purple {
+         color: #bf0db6;
+     }
+     .border-purple {
+         border-color: #bf0db6 !important;
+     }
+     .badge-orange, .bg-orange {
+         background: #f05f13;
+         color: white;
+     }
+     .text-orange {
+         color: #f05f13;
+     }
+     .border-orange {
+         border-color: #f05f13 !important;
+     }
+     .badge-cyan, .bg-cyan {
+         background: #14f5e4;
+         color: black;
+     }
+     .text-cyan {
+         color: #14f5e4;
+     }
+     .border-cyan {
+         border-color: #14f5e4 !important;
+     }
+     .badge-abu, .bg-abu {
+         background: #b1b5b7;
+         color: black;
+     }
+     .text-abu {
+         color: #b1b5b7;
+     }
+     .border-abu {
+         border-color: #b1b5b7 !important;
+     }
+    </style>
 {% endblock head %}
 {% block maindash %}
-    <div class="row py-4">
-        <div class="col-md m-2 p-3 bg-white rounded shadow">
-            <h4 class="mb-1 judul">Total Pendaftar</h4>
-            <br />
-            <h3 class="mb-0 mt-1">{{ total_participant }} <small class="text-muted h6 judul">siswa</small></h3>
+    <div class="row bg-white p-3 my-3 border rounded" style="margin-left: 1px; margin-right: 1px">
+        <div class="ml-2">
+            <h3 class="judul">Statistik Total Pendaftar</h3>
         </div>
-        <div class="col-md m-2  p-3 bg-white rounded shadow">
-            <h4 class="mb-1 judul">Total Pendaftar</h4><span class="badge badge-success">DITERIMA/LULUS</span>
-            <br />
-            <h3 class="mb-0 mt-1">{{ total_participant_accepted }} <small class="text-muted h6 judul">siswa</small></h3>
-        </div>
-        <div class="col-md m-2 p-3 bg-white rounded shadow">
-            <h4 class="mb-1 judul">Total Pendaftar</h4><span class="badge badge-danger">SUDAH BAYAR DAFTAR ULANG</span>
-            <br />
-            <h3 class="mb-0 mt-1">{{ total_participant_pay }} <small class="text-muted h6 judul">siswa</small></h3>
-        </div>
-        <div class="col-md m-2  p-3 bg-white rounded shadow">
-            <h4 class="mb-1 judul">Total Pendaftar</h4><span class="badge badge-primary">LUNAS BAYAR DAFTAR ULANG</span>
-            <br />
-            <h3 class="mb-0 mt-1">{{ total_participant_paid_off }} <small class="text-muted h6 judul">siswa</small></h3>
-        </div>
-        <div class="col-md m-2  p-3 bg-white rounded shadow">
-            <h4 class="mb-1 judul">Total Pendaftar</h4><span class="badge badge-warning">SUDAH MENGISI FORM DAFTAR ULANG</span>
-            <br />
-            <h3 class="mb-0 mt-1">{{ total_participant_profile }} <small class="text-muted h6 judul">siswa</small></h3>
+        <div class="col-12">
+
+            <div class="row">
+                <div class="col-md m-2 p-3 bg-white rounded border">
+                    <h3 class="mb-0 mt-1">{{ total_participant }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul">Total Pendaftar</h4>
+                </div>
+                <div class="col-md m-2 p-3 bg-white rounded border">
+                    <h3 class="mb-0 mt-1">{{ total_mm }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul">Memilih Prodi MM</h4>
+                </div>
+                <div class="col-md m-2 p-3 bg-white rounded border">
+                    <h3 class="mb-0 mt-1">{{ total_tkj }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul">Memilih Prodi TKJ</h4>
+                </div>
+                <div class="col-md m-2 p-3 bg-white rounded border">
+                    <h3 class="mb-0 mt-1">{{ total_tjat }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul">Memilih Prodi TJAT</h4>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md m-2  p-3 bg-white rounded border border-success">
+                    <h3 class="mb-0 mt-1">{{ total_participant_accepted }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-success">DITERIMA/LULUS</span></h4>
+                </div>
+                <div class="col-md m-2 p-3 bg-white rounded border border-danger">
+                    <h3 class="mb-0 mt-1">{{ total_participant_pay }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-danger">SUDAH BAYAR DAFTAR ULANG</span></h4>
+                </div>
+                <div class="col-md m-2  p-3 bg-white rounded border border-primary">
+                    <h3 class="mb-0 mt-1">{{ total_participant_paid_off }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-primary">LUNAS BAYAR DAFTAR ULANG</span></h4>
+                </div>
+                <div class="col-md m-2  p-3 rounded border border-warning">
+                    <h3 class="mb-0 mt-1">{{ total_participant_paid_off }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-warning">LUNAS BAYAR DAFTAR ULANG</span></h4>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md m-2  p-3 bg-white rounded border border-purple">
+                    <h3 class="mb-0 mt-1">{{ total_participant_pay_1 }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-purple">LUNAS PEMBAYARAN PERTAMA</span></h4>
+                </div>
+                <div class="col-md m-2 p-3 bg-white rounded border border-orange">
+                    <h3 class="mb-0 mt-1">{{ total_participant_pay_2 }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-orange">LUNAS PEMBAYARAN KEDUA</span></h4>
+                </div>
+                <div class="col-md m-2  p-3 bg-white rounded border border-abu">
+                    <h3 class="mb-0 mt-1">{{ total_participant_pay_3 }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-abu">LUNAS PEMBAYARAN KETIGA</span></h4>
+                </div>
+                <div class="col-md m-2  p-3 rounded border border-cyan">
+                    <h3 class="mb-0 mt-1">{{ total_re_register_files }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-cyan">KUMPUL BERKAS DAFTAR ULANG</span></h4>
+                </div>
+            </div>
+
         </div>
     </div>
 
-    <div class="row px-2">
+
+    <div class="row px-3">
         <div class="col-md-12 py-3 bg-white rounded border">
             <div class="row">
                 <div class="col">
-                    <h3 class="judul">Daftar Calon Murid</h3>
+                    <h3 class="judul">Daftar Calon Peserta Didik SMK Telkom Bandung</h3>
+                    <form method="GET" action="">
+                        <div class="input-group w-50 mb-2">
+                            <input type="text" name="search-name" class="form-control" placeholder="Cari Nama Calon Siswa..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="col d-flex justify-content-end align-items-start">
                     <a class="btn btn-sm btn-outline-danger mt-1" href="{% url 'export' %}">Export</a>
@@ -50,9 +143,13 @@
                 <table class="table table-hover table-sm">
                     <thead class="thead-light">
                         <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">No. Peserta</th>
-                            <th scope="col">Nama</th>
+                            <th scope="col">No. <a href="?sort=desc">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-sort-down" viewBox="0 0 16 16">
+                                    <path d="M3.5 2.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 11.293V2.5zm3.5 1a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zM7.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3zm0 3a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
+                                </svg>
+                            </a></th>
+                            <th scope="col">No. Pendaftaran</th>
+                            <th scope="col">Nama Lengkap</th>
                             <th scope="col">Nama Orang Tua</th>
                             <th scope="col">No. HP Orang Tua</th>
                             <th scope="col">Asal Sekolah</th>
@@ -108,6 +205,34 @@
                                             </svg>
                                         </span>
                                     {% endif %}
+                                    {% if s.account.participantrepayment.verified_1 %}
+                                        <span class="badge badge-purple" data-toggle="tooltip" data-placement="top" title="Lunas Pembayaran Daftar Ulang 1">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-purple bi bi-circle-fill" viewBox="0 0 16 16">
+                                                <circle cx="8" cy="8" r="8"/>
+                                            </svg>
+                                        </span>
+                                    {% endif %}
+                                    {% if s.account.participantrepayment.verified_2 %}
+                                        <span class="badge badge-orange" data-toggle="tooltip" data-placement="top" title="Lunas Pembayaran Daftar Ulang 2">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-orange bi bi-circle-fill" viewBox="0 0 16 16">
+                                                <circle cx="8" cy="8" r="8"/>
+                                            </svg>
+                                        </span>
+                                    {% endif %}
+                                    {% if s.account.participantrepayment.verified_3 %}
+                                        <span class="badge badge-abu" data-toggle="tooltip" data-placement="top" title="Lunas Pembayaran Daftar Ulang 3">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-abu bi bi-circle-fill" viewBox="0 0 16 16">
+                                                <circle cx="8" cy="8" r="8"/>
+                                            </svg>
+                                        </span>
+                                    {% endif %}
+                                    {% if s.account.reportfileparticipant_set and s.account.studentfile %}
+                                        <span class="badge badge-cyan" data-toggle="tooltip" data-placement="top" title="Sudah Mengumpulkan Berkas Daftar Ulang">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-cyan bi bi-circle-fill" viewBox="0 0 16 16">
+                                                <circle cx="8" cy="8" r="8"/>
+                                            </svg>
+                                        </span>
+                                    {% endif %}
                                 </td>
                                 {% if request.user.is_staff %}
                                 <td>
@@ -132,15 +257,14 @@
             </div>
         </div>
     </div>
-    <div class="col-12">
+    <div class="col-12 my-3">
         <!-- PAGINATING -->
-        {% if is_paginated %}
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center ">
-                    {% if siswa.has_previous %}
+                    {% if participant.has_previous %}
                         <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
                         <li class="page-item">
-                            <a class="page-link" href="?page{{ siswa.previous_page_number }}">
+                            <a class="page-link" href="?page{{ participant.previous_page_number }}">
                                 <span aria-colspan="true">&laquo;</span>
                                 <span class="sr-only">Previous</span>
                             </a>
@@ -155,24 +279,24 @@
                         </li>
                     {% endif %}
 
-                    {% for n in siswa.paginator.page_range %}
-                        {% if siswa.number == n %}
+                    {% for n in participant.paginator.page_range %}
+                        {% if participant.number == n %}
                             <li class="page-item active">
                                 <a class="page-link" href="?page={{ n }}">{{ n }}</a>
                             </li>
-                        {% elif n > siswa.number|add:'-4' and n < siswa.number|add:'4' %}
+                        {% elif n > participant.number|add:'-4' and n < participant.number|add:'4' %}
                             <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
                         {% endif %}
                     {% endfor %}
 
-                    {% if siswa.has_next %}
+                    {% if participant.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ siswa.next_page_number }}" aria-label="Next">
+                            <a class="page-link" href="?page={{ participant.next_page_number }}" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                                 <span class="sr-only">Next</span>
                             </a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="?page={{ siswa.paginator.num_pages }}">Last</a></li>
+                        <li class="page-item"><a class="page-link" href="?page={{ participant.paginator.num_pages }}">Last</a></li>
                     {% else %}
                         <li class="page-item disabled">
                             <a class="page-link" href="#">
@@ -184,7 +308,6 @@
                     {% endif %}
                 </ul>
             </nav>
-        {% endif %}
 
     </div>
 {% endblock maindash %}
