--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -89,8 +89,8 @@
                     <h4 class="mb-1 judul"><span class="badge badge-primary">LUNAS BAYAR DAFTAR ULANG</span></h4>
                 </div>
                 <div class="col-md m-2  p-3 rounded border border-warning">
-                    <h3 class="mb-0 mt-1">{{ total_participant_paid_off }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-warning">LUNAS BAYAR DAFTAR ULANG</span></h4>
+                    <h3 class="mb-0 mt-1">{{ total_participant_profile }} <small class="text-muted h6 judul">siswa</small></h3>
+                    <h4 class="mb-1 judul"><span class="badge badge-warning">MENGISI FORM PENDAFTARAN</span></h4>
                 </div>
             </div>
 
