change some text

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row justify-content-center align-items-center text-center text-lg-left">
                 <div class="col-lg-6 col-md-10">
-                    <span class="d-block" data-aos="fade-down">Penerimaan Siswa Baru (PRIMASERU)</span>
+                    <span class="d-block" data-aos="fade-down">Penerimaan Peserta Didik Baru (PRIMASERU)</span>
                     <h1 class="font-weight-bold" data-aos="fade-right" data-aos-delay="200">Achieve Your Dream <span class="red-text">With Us</span></h1>
                     <div data-aos="fade-up" data-aos-delay="400">
                         <p class="mb-5 mt-3">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p>
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="row justify-content-center align-items-end">
                 <div class="col-lg-6 col-md-10">
-                    <h1 class="heading-section mb-3">Jurusan di SMK Telkom Bandung <span class="red-text">Pilih Passion Kamu!</span></h1>
+                    <h1 class="heading-section mb-3">Program Studi di SMK Telkom Bandung <span class="red-text">Pilih Passion Kamu!</span></h1>
                     <p  class="mb-5 mb-lg-0">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p>
                 </div>
 
@@ -104,7 +104,7 @@
                 <div class="col-lg-6 col-md-10">
                     <article>
                         <h2 class="font-weight-bold">Teknik Komputer dan Jaringan</h2>
-                        <p>Jika kalian suka dengan komputer, programing, atau mungkin jaringan komputer, kalian mungkin cocok dengan jurusan Teknik Komputer dan Jaringan (TKJ), disini kalian akan mempelajari tentang komputer, mulai dari hardware, jaringan, sampai software pun akan kalian pelajari.</p>
+                        <p>Jika kalian suka dengan komputer, programing, atau mungkin jaringan komputer, kalian mungkin cocok dengan program studi Teknik Komputer dan Jaringan (TKJ), disini kalian akan mempelajari tentang komputer, mulai dari hardware, jaringan, sampai software pun akan kalian pelajari.</p>
                         <p class="fs-md">Materi Keahlian:</p>
                         <div class="d-flex mb-4 flex-column flex-md-row justify-content-between">
                             <ul class="mb-0 py-0">
@@ -135,7 +135,7 @@
                 <div class="col-lg-6 col-md-10 order-lg-1">
                     <article>
                         <h2 class="font-weight-bold">Multimedia</h2>
-                        <p>Kalian suka menggambar? Atau photo mungkin? Nah kalau kalian suka itu atau yang lainnya seperti animasi, video editing, dan lain - lain, kalian mungkin cocok tuh masuk jurusan Multimedia (MM). Di sini kalian akan belajar photography sampai membuat game loh. Seru banget tuh pasti.</p>
+                        <p>Kalian suka menggambar? Atau photo mungkin? Nah kalau kalian suka itu atau yang lainnya seperti animasi, video editing, dan lain - lain, kalian mungkin cocok tuh masuk program studi Multimedia (MM). Di sini kalian akan belajar photography sampai membuat game loh. Seru banget tuh pasti.</p>
                         <p class="fs-md">Materi Keahlian:</p>
                         <div class="d-flex mb-4 flex-column flex-md-row justify-content-between">
                             <ul class="mb-0 py-0">
