--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto align-items-start align-items-lg-center">
                             <li class="nav-item mx-2">
-                                <a class="nav-link" href="#section-2">Jurusan</a>
+                                <a class="nav-link" href="#section-2">Program Studi</a>
                             </li>
                             <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-4">Alur pendaftaran</a>
