--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -60,6 +60,9 @@
                                 <li class="nav-item mx-2">
                                     <a class="nav-link my-btn-primary py-2 px-3 text-white" href="{% url 'profile' %}">Profile</a>
                                 </li>
+                                <li class="nav-item mx-2">
+                                    <a class="nav-link my-btn-outline-primary py-2 px-3 text-white" href="{% url 'logout' %}">Logout</a>
+                                </li>
                             {% else %}
                                 <li class="nav-item mx-2">
                                     <a class="nav-link my-btn-outline-primary py-2 px-3 text-white" href="{% url 'login' %}">Login</a>
