--- a/templates/participant_profile/re_payment.html
+++ b/templates/participant_profile/re_payment.html
@@ -86,9 +86,14 @@
                             <p>
                                 Lakukan pembayaran daftar ulang ke Nomor Virtual Account <b>Mandiri</b>. <br />
                             </p>
-                            <p>
-                                <span class="card-detail card-bg border border-danger rounded p-2">Nomor Virtual Account: {{ data.virt_acc_number  }}</span>
-                            </p>
+                            <div>
+                                <p class="d-block d-md-inline">
+                                    <span class="card-detail card-bg border border-danger rounded p-2">Nomor Virtual Account: <b>{{ data.virt_acc_number  }}</b></span>
+                                </p>
+                                <p class="ml-0 ml-md-3 d-block d-md-inline">
+                                    <span class="card-detail card-bg border border-danger rounded p-2">Virtual Account Atas Nama: <b>{{ data.whom_acc  }}</b></span>
+                                </p>
+                            </div>
                             <hr />
                             <p>
                                 {% if data.paid_off %}
