fix bug: major choosed not displayed

--- a/templates/participant_profile/graduation.html
+++ b/templates/participant_profile/graduation.html
@@ -99,7 +99,7 @@
                                         Primaseru SMK Telkom Bandung tahun 2021:
                                     </p>
                                     <p class="border border-success rounded p-3 bg-white">
-                                        Program Studi: Teknik Komputer dan Jaringan
+                                        Program Studi: {{ data.get_chose_major_display|upper  }}
                                     </p>
                                     <div>
                                         <p>
