--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md m-2 p-3 bg-white rounded border border-danger">
                     <h3 class="mb-0 mt-1">{{ total_participant_pay }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-danger">SUDAH BAYAR DAFTAR ULANG</span></h4>
+                    <h4 class="mb-1 judul"><span class="badge badge-danger">INPUT TAGIHAN DAFTAR ULANG</span></h4>
                 </div>
                 <div class="col-md m-2  p-3 bg-white rounded border border-primary">
                     <h3 class="mb-0 mt-1">{{ total_participant_paid_off }} <small class="text-muted h6 judul">siswa</small></h3>
@@ -185,14 +185,14 @@
                                         </span>
                                     {% endif %}
                                     {% if s.account.participantrepayment.paid_off %}
-                                        <span class="badge badge-primary" data-toggle="tooltip" data-placement="top" title="Lunas">
+                                        <span class="badge badge-primary" data-toggle="tooltip" data-placement="top" title="Lunas Bayar Daftar Ulang">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-primary bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
                                             </svg>
                                         </span>
                                     {% endif %}
                                     {% if s.account.participantrepayment %}
-                                        <span class="badge badge-danger" data-toggle="tooltip" data-placement="top" title="Sudah Bayar Daftar Ulang">
+                                        <span class="badge badge-danger" data-toggle="tooltip" data-placement="top" title="Input Tagihan Daftar Ulang">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-danger bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
                                             </svg>
@@ -226,7 +226,7 @@
                                             </svg>
                                         </span>
                                     {% endif %}
-                                    {% if s.account.reportfileparticipant_set and s.account.studentfile %}
+                                    {% if s.account.studentfile %}
                                         <span class="badge badge-cyan" data-toggle="tooltip" data-placement="top" title="Sudah Mengumpulkan Berkas Daftar Ulang">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-cyan bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
