--- a/templates/homepage/register.html
+++ b/templates/homepage/register.html
@@ -30,7 +30,7 @@
             {% endif %}
             <div class="row justify-content-center">
                 <div class="col-lg-9">
-                    <form action="" method="POST">
+                    <form action="" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% crispy form2 %}
                         {% crispy form %}
