--- a/templates/participant_profile/primaseru.html
+++ b/templates/participant_profile/primaseru.html
@@ -314,7 +314,7 @@
 
 
     <!-- Logout Modal-->
-    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
