add website author

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -408,6 +408,10 @@
                 <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 order-lg-1">
                     <img loading="lazy" src="{% static 'homepage/images/logo.png' %}" class="img-fluid mb-4" alt="logo smk telkom bandung">
                     <p>Guiding the Generation Supporting Enhancement of Nation's Competitiveness. Berdiri tahun 2013 dan sudah terakreditasi "A" dengan menghasilkan lulusan yang berkualitas sehingga langsung diserap oleh dunia industri.</p>
+                    <div>
+                        <h4>Created By</h4>
+                        Siswa TKJ – PPDB SMK Telkom Bandung
+                    </div>
                 </div>
             </div>
         </div>
