--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -3,6 +3,7 @@
 {% block dashtitle %}
     Dashboard Primaseru <span class="badge badge-warning">{{ request.user.username }}</span> <br />
     <a class="btn btn-light"  href="{% url 'insert-participant' %}">Tambah Pendaftar</a>
+    <a class="btn btn-outline-light"  href="{% url 'logout' %}">Logout</a>
 {% endblock dashtitle %}
 {% block head %}
     {{ block.super  }}
