--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -279,6 +279,16 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-8 col-md-12">
+                    <div class="card-program my-4">
+                        <img loading="lazy" src="{% static 'homepage/images/patriot.jpg' %}" class="mb-4 mb-md-0 order-md-2" alt="patriot">
+                        <div class="pr-4">
+                            <h3 class="font-weight-bold order-md-1">PATRIOT</h3>
+                            <p>PATRIOT adalah Pendidikan Integritas dan Orientasi Kedisiplinan yaitu rangkaian kegiatan mula bagi siswa-siswi baru di SMK Telkom Bandung. Tujuan dilaksanakannya kegiatan ini adalah untuk terbentuknya peserta didik SMK Telkom Bandung yang berkarakter tangguh, berintegritas, dan disiplin.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
