--- a/templates/dashboard/dashboard_base.html
+++ b/templates/dashboard/dashboard_base.html
@@ -137,18 +137,11 @@
                     <a class="navbar-brand" href="javascript:void(0)" id="openNav">
                         <span class="navbar-toggler-icon"></span>
                     </a>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="btn btn-light btn-sm" href="{% url 'logout' %}">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
                 </nav>
             </div>
             <div class="col-12">
-                <div class="caption text-white judul">
-                    <h2 class="mb-0 mt-2">
+                <div class="caption text-white judul mb-3 mt-3 ml-4">
+                    <h2 class="0">
                         {% block dashtitle %}
                             Dashboard Utama
                         {% endblock dashtitle %}
