--- a/templates/participant_profile/primaseru.html
+++ b/templates/participant_profile/primaseru.html
@@ -109,7 +109,7 @@
                     <span>Jurusan</span></a>
             </li>
 
-            {% if lms %}
+            {% if lms or graduation %}
             <!-- Nav Item - Test -->
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'participant-lms' %}">
