--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-md m-2  p-3 rounded border border-warning">
                     <h3 class="mb-0 mt-1">{{ total_participant_profile }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-warning">MENGISI FORM PENDAFTARAN</span></h4>
+                    <h4 class="mb-1 judul"><span class="badge badge-warning">MENGISI IDENTITAS</span></h4>
                 </div>
             </div>
 
@@ -195,7 +195,7 @@
                                         </span>
                                     {% endif %}
                                     {% if s.account.participantprofile %}
-                                        <span class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="Sudah Mengisi Form Daftar Ulang">
+                                        <span class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="Sudah Mengisi Identitas">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-warning bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
                                             </svg>
